@@ -8,6 +8,7 @@ begin
     gem.homepage = "http://github.com/jgsmith/ruby-fabulator"
     gem.authors = ["James Smith"]
     gem.add_dependency(%q<libxml-ruby>, [">= 1.1.3"])
+    gem.add_dependency(%q<libxslt-ruby>, [">= 0.9.7"])
     gem.add_dependency(%q<radius>, [">= 0.6.1"]) 
     # gem is a Gem::Specification... see http://www.rubygems.org/read/chapter/20 for additional settings
   end
